--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
+  "name": "citymedicals",
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://127.0.0.1:5000",
   "main": "server.js",
-  "scripts": {
-    "server": "nodemon BackEnd/server.js",
-    "client": "npm start --prefix FrontEnd",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.23",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.1",
@@ -21,29 +12,34 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.4",
+    "babel-jest": "^26.6.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "concat": "^1.0.3",
-    "concurrently": "^6.2.1",
+    "concurrently": "^7.2.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "file-saver": "^2.0.5",
     "fs": "0.0.1-security",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "mdb-ui-kit": "^3.11.0",
+    "mongodb": "^4.6.0",
     "mongoose": "^6.2.10",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.16",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pdfkit": "^0.12.3",
-    "react": "^17.0.2",
+    "react": "^17.0.1",
     "react-bootstrap": "^2.2.1",
     "react-datepicker": "^4.7.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.1",
     "react-loading": "^2.0.3",
     "react-number-format": "^4.9.3",
     "react-router-dom": "^5.2.0",
@@ -52,5 +48,30 @@
     "react-toastify": "^8.0.2",
     "validator": "^13.6.0",
     "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "node Backend/server.js",
+    "server": "nodemon BackEnd/server.js",
+    "client": "npm start --prefix frontend",
+    "import": "node BackEnd/seederScript.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
