--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,7 +20,9 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "animate.css": "^4.1.1",
+    "cleave.js": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
