--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,7 +8,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
+    "cleave.js": "^1.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "react": "^17.0.1",
@@ -16,13 +18,11 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^8.0.2",
+    "react-toastify": "^8.2.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4",
-    "animate.css": "^4.1.1",
-    "cleave.js": "^1.6.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
